--- a/index.html
+++ b/index.html
@@ -1209,8 +1209,8 @@ nav {
                 <div class="footer-section">
                     <h3 class="footer-title">Contact Info</h3>
                     <ul class="contact-info">
-                        <li><i class="fas fa-envelope"></i> blukoffee studios.com</li>
-                        <li><i class="fas fa-phone"></i> (0111955641)</li>
+                        <li><i class="fas fa-envelope"></i> blukoffee1@gmail.com</li>
+                        <li><i class="fas fa-phone"></i> (0795107535)</li>
                         <li><i class="fas fa-map-marker-alt"></i> Nairobi</li>
                         <li><i class="fas fa-camera"></i> Available Nationwide for assignments</li>
                     </ul>
