--- a/contact.html
+++ b/contact.html
@@ -593,11 +593,11 @@
                 <h3 class="info-title"><i class="fas fa-envelope"></i> Contact Details</h3>
                 <div class="info-detail">
                     <i class="fas fa-envelope"></i>
-                    <span>Blu Koffee Studios.com</span>
+                    <span>blukoffee1@gmail.com</span>
                 </div>
                 <div class="info-detail">
                     <i class="fas fa-phone"></i>
-                    <span>+254 111955641</span>
+                    <span>+254 795 107 535</span>
                 </div>
                 <div class="info-detail">
                     <i class="fas fa-map-marker-alt"></i>
