--- a/gallery.html
+++ b/gallery.html
@@ -745,20 +745,16 @@
                     </ul>
                 </div>
                 
-                <div class="footer-social">
-                    <h3>Follow Us</h3>
-                    <div class="social-icons">
-                        <a href="#" class="social-icon" aria-label="Instagram">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                        <a href="#" class="social-icon" aria-label="Facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="#" class="social-icon" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="social-icon" aria-label="Pinterest">
-                            <i class="fab fa-pinterest-p"></i>
+                <div class="info-card">
+                <h3 class="info-title"><i class="fas fa-share-alt"></i> Connect With Me</h3>
+                <p style="color: var(--text-gray); margin-bottom: 20px;">Follow for behind-the-scenes, latest work, and photography tips.</p>
+                <div class="social-links">
+                    <a href="https://wa.me/19497101240" class="social-link" aria-label="whatsapp">
+                        <i class="fab fa-whatsapp"></i>
+                    <a href="https://instagram.com/blu_koffee" class="social-link" aria-label="instagram">
+                    <i class="fab fa-instagram"></i>
+                    <a href="mailto:blukoffee1@gmail.com" class="social-link" aria-label="email">
+                         <i class="fas fa-envelope"></i>
                         </a>
                     </div>
                 </div>
