--- a/index.html
+++ b/index.html
@@ -1199,12 +1199,13 @@ nav {
                 <div class="footer-section">
                     <h3 class="footer-title">Blu Koffee Studios</h3>
                     <p>Preserving memories through the timeless art of photography. Blending vintage aesthetics with modern techniques to capture your most precious moments.</p>
-                   
+                    <div class="social-icons">
+                       
                 </div>
                 <div class="footer-section">
                     <h3 class="footer-title">Contact Info</h3>
                     <ul class="contact-info">
-                        <li><i class="fas fa-envelope"></i> blukoffee1@gmail.com</li>
+                        <li><i class="fas fa-envelope"></i> blukoffee studios.com</li>
                         <li><i class="fas fa-phone"></i> (0795107535)</li>
                         <li><i class="fas fa-map-marker-alt"></i> Nairobi</li>
                         <li><i class="fas fa-camera"></i> Available Nationwide for assignments</li>
