--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,7 @@ nav {
         }
     </style>
 </head>
+<meta name="google-site-verification" content="-3zR88-zTxAWsq_766_DJifKhOk3mmPt8n-lNuKDkQE" />
 <body>
     <!-- Modern Texture Overlay -->
     <div class="texture-overlay"></div>
